--- a/Music_player/main.css
+++ b/Music_player/main.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: rgb(6, 178, 241);
+  --primary-color: #0bbdee;
   --text-color: #333;
 }
 
@@ -11,18 +11,11 @@
 
 body {
   background-color: #f5f5f5;
-  background-image: linear-gradient(to bottom right, rgb(6, 178, 241), rgb(110, 231, 250));
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  position: fixed;
 }
 
 html {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  width: 100%;
-  height: 100%;
 }
 
 .player {
@@ -51,7 +44,6 @@ html {
   width: 100%;
   max-width: 480px;
   border-bottom: 1px solid #ebebeb;
-  margin-top: 50px;
 }
 
 /* HEADER */
@@ -119,26 +111,28 @@ header h2 {
 .progress {
   width: 100%;
   -webkit-appearance: none;
-  height: 6px;
+  height: 10px;
+  border-radius: 14px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
   -webkit-transition: 0.2s;
   transition: opacity 0.2s;
+  cursor: pointer;
 }
 
 .progress::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 12px;
-  height: 6px;
+  height: 10px;
   background-color: var(--primary-color);
   cursor: pointer;
 }
 
 /* PLAYLIST */
 .playlist {
-  margin-top: 450px;
+  margin-top: 408px;
   padding: 12px;
 }
 
@@ -193,4 +187,23 @@ header h2 {
   padding: 16px 8px;
   color: #999;
   font-size: 18px;
+}
+
+.song.active {
+  background-color: var(--primary-color);
+}
+
+.song.active .author,
+.song.active .title {
+  color: #fff;
+}
+
+.song:active {
+  opacity: 0.5;
+}
+.btn-next:hover {
+  color: var(--primary-color);
+}
+.btn-prev:hover {
+  color: var(--primary-color);
 }
