--- a/Music_player/main.css
+++ b/Music_player/main.css
@@ -11,13 +11,24 @@
 
 body {
   background-color: #f5f5f5;
+  height: 100%;
 }
 
 html {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  height: 100%;
+  background-color: #aaeaff;
 }
+.bg {
+  height: 100%;
 
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #aaeaff;
+}
 .player {
   position: relative;
   max-width: 480px;
@@ -40,7 +51,7 @@ html {
   padding: 16px 16px 14px;
   background-color: #fff;
   position: fixed;
-  top: 0;
+  top: 0px;
   width: 100%;
   max-width: 480px;
   border-bottom: 1px solid #ebebeb;
@@ -132,7 +143,7 @@ header h2 {
 
 /* PLAYLIST */
 .playlist {
-  margin-top: 408px;
+  margin-top: 418px;
   padding: 12px;
 }
 
